[package]
name = "vin"
version = "2.1.5"
edition = "2021"
categories = ["concurrency"]
description = "An ergonomic actor framework"
homepage = "https://github.com/mscofield0/vin"
keywords = ["actor", "concurrency"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mscofield0/vin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vin-core = { path = "src/vin-core", version = "1.1" }
vin-macros = { path = "src/vin-macros", version = "1.0" }

[dev-dependencies]
tracing-subscriber = "0.3"

[workspace]
members = ["src/vin-macros", "src/vin-core"]