[package]
name = "vin"
version = "5.1.1"
edition = "2021"
categories = ["concurrency"]
description = "An ergonomic actor framework"
homepage = "https://github.com/mscofield0/vin"
keywords = ["actor", "concurrency"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mscofield0/vin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vin-core = { path = "src/vin-core", version = "4.1" }
vin-macros = { path = "src/vin-macros", version = "4.1" }

[dev-dependencies]
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.3"

[workspace]
members = ["src/vin-macros", "src/vin-core"]