[package]
name = "vin-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vin-core = { path = "../vin-core", version = "0.1" }
vin-proc-macros = { path = "src/vin-proc-macros", version = "*" }
crossbeam = "0.8"
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1.21", features = ["macros", "rt", "sync"] }
futures = "0.3"

[workspace]
members = ["src/vin-proc-macros"]
