[package]
name = "vin-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "1.21", features = ["sync", "parking_lot", "time"] }
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
async-channel = "1.7"
downcast-rs = "1.2"