[package]
name = "vin-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vin-core = { path = "../vin-core", version = "*" }
vin-proc-macros = { path = "src/vin-proc-macros", version = "*" }
crossbeam = "0.8"
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1.21", features = ["macros", "rt", "sync", "time"] }
futures = "0.3"
async-channel = "1.7"

[dev-dependencies]
tracing-subscriber = "0.3"
