[package]
name = "vin-macros"
version = "1.0.0"
description = "Procedural macros that power vin"
edition = "2021"
categories = ["actor", "concurrency", "proc_macro"]
homepage = "https://github.com/mscofield0/vin"
repository = "https://github.com/mscofield0/vin"
keywords = ["actor", "concurrency", "proc_macro"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
rassert-rs = "1"
itertools = "0.10"
