[package]
name = "vin-macros"
version = "8.0.2"
description = "Procedural macros that power vin"
edition = "2021"
categories = ["concurrency"]
homepage = "https://github.com/mscofield0/vin"
repository = "https://github.com/mscofield0/vin"
keywords = ["actor", "concurrency"]
license-file = "../../LICENSE"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
rassert-rs = "1"
itertools = "0.10"
